Bug 1929357 - [Section Expt] If a card has been Saved to Pocket, it should have Pocket logo visible at all times  r=home-newtab-reviewers,thecount
- Updated styles to show a compact Pocket button (Pocket logo only) when the user saves a story to Pocket.

- Updated DSContextFooter component to not show "Saved to Pocket" at the bottom of the card.

- Limited this UI change only to users who are opted in to the Sections experiment.

Differential Revision: https://phabricator.services.mozilla.com/D229875

--- a/browser/components/newtab/content-src/components/DiscoveryStreamComponents/CardSections/_CardSections.scss
+++ b/browser/components/newtab/content-src/components/DiscoveryStreamComponents/CardSections/_CardSections.scss
@@ -445,3 +445,51 @@
     }
   }
 }
+
+
+.ds-card.sections-card-ui {
+  // Make the button with the Pocket shield logo always visible if the story
+  // featured in this card was saved to Pocket. This additional class
+  // overrides default styles for the hover Pocket button and context menu.
+  .ds-compact-pocket-saved-button {
+    opacity: 1;
+
+    .icon-pocket-save,
+    .icon-pocket {
+      margin-inline-end: 0;
+    }
+
+    .context-menu-position-container {
+      display: none;
+    }
+
+    .card-stp-button {
+      margin-inline-end: 0;
+    }
+
+    .pocket-saved-copy {
+      display: none;
+    }
+
+    // on hover & co, restore original styles
+    &:hover, &:focus-within, &:active {
+      .icon-pocket-save,
+      .icon-pocket {
+        margin-inline-end: 4px;
+      }
+
+      .context-menu-position-container {
+        display: revert;
+      }
+
+      .card-stp-button {
+        margin-inline-end: 7px;
+        display: revert;
+      }
+
+      .pocket-saved-copy {
+        display: revert;
+      }
+    }
+  }
+}
